test2.log
Traceback (most recent call last):
  File "/home/zhengji/miniconda3/envs/tfp/lib/python3.8/runpy.py", line 185, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/home/zhengji/miniconda3/envs/tfp/lib/python3.8/runpy.py", line 155, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/nfs/turbo/coe-rbg/zhengji/age/train.py", line 17
    train_accuracy = 
                    ^
SyntaxError: invalid syntax
